# robots-plugins

./: CMakeLists.txt  README.md
src/RobotsPlugins/: CMakeLists.txt
src/RobotsPlugins/ModelMover/: CMakeLists.txt
src/RobotsPlugins/ModelMover/include/: ModelMover.h
src/RobotsPlugins/ModelMover/src/: ModelMover.cpp
src/RobotsPlugins/SegmentationCamera/: CMakeLists.txt
src/RobotsPlugins/SegmentationCamera/include/: MeshPoseViewer.h  SegmentationCamera.h
src/RobotsPlugins/SegmentationCamera/src/: SegmentationCamera.cpp
src/RobotsPlugins/Utils/: CMakeLists.txt
src/RobotsPlugins/Utils/include/RobotsPlugins/Utils/: Utils.hpp
